refactor: replace _apacheCommonsCodec Base64 with JDK Base64 and enhance error handling (#801) (#842)
Replaced the custom Base64 implementation from the _apacheCommonsCodec package with java.util.Base64. Removed the obsolete Base64 class.

Updated HttpBasicAuthenticationProvider to handle Base64 decoding errors gracefully, preserving existing behavior for invalid external input (e.g., charset issues, illegal characters). Added logging to warn when decoding fails.

Introduced structured logging in the Rest module following Operaton’s standard style (as used in the engine module). RestLogger is a sealed class to enforce logger implementations extend from BaseLogger, ensuring consistency.

Added HttpBasicAuthenticationProviderTest to validate behavior, including scenarios with invalid Base64 input.

Closes #801